# awesome-failed-ml-experiments

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  WEEKLY_SUMMARY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto_merge.yml  validate.yml  weekly_summary.yml
scripts/: deduplicate.py  link_check.py  update_readme.py  validate_submission.py  weekly_summary.py
submissions/2026/: failed_experiment_example.md
